--- a/src/main/resources/static/Index.html
+++ b/src/main/resources/static/Index.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
         <meta name="description" content="Reto #4 ciclo3 MisionTIC 2022" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-        <title>Ejemplo de OAuth2 con Spring</title>
+        <title>OAuth2 con Spring</title>
         <base href="/" />
         <link rel="stylesheet" type="text/css" href="/webjars/bootstrap/css/bootstrap.min.css"/>
         <link rel="stylesheet" href="style.css" type="text/css">
@@ -15,7 +15,7 @@
         <script type="text/javascript" src="/webjars/bootstrap/js//bootstrap.min.js"></script> 
     </head>
     <body>
-        <h1>#MisionTIC 2022</h1>
+        <h1>MisionTIC 2022 Reto4</h1>
         <div class="container unauthenticated">
             Para iniciar sesión con Github: |
             <a href="/oauth2/authorization/github">haz click</a>
